src/importer/snapshots/annatto__importer__git__tests__error_message_uncommitted_changes.snap
---
source: src/importer/git.rs
expression: u.err().unwrap().to_string()
---
The repository sub directory has uncommitted changes and/or untracked files:
data/doc.csv	Status(WT_NEW)
