src/importer/snapshots/annatto__importer__git__tests__feature_test.snap
---
source: src/importer/git.rs
expression: actual.unwrap()
---
---- data.graphml:
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k2" for="node" attr.name="git::revision" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="data">
            <data key="k1">corpus</data>
            <data key="k2">aca4668a9a57faf908ef519020f082b9429fc3df</data>
        </node>
    </graph>
</graphml>
