src/importer/snapshots/annatto__importer__git__tests__git_features.snap
---
source: src/importer/git.rs
expression: actual.unwrap()
---
---- data.graphml:
<?xml version="1.0" encoding="UTF-8"?>
<graphml>
    <key id="k0" for="graph" attr.name="configuration" attr.type="string"/>
    <key id="k1" for="node" attr.name="annis::node_type" attr.type="string"/>
    <key id="k2" for="node" attr.name="git::revision" attr.type="string"/>
    <graph edgedefault="directed" parse.order="nodesfirst" parse.nodeids="free" parse.edgeids="canonical">
        <data key="k0"><![CDATA[
# configure visualizations here
]]></data>
        <node id="data">
            <data key="k1">corpus</data>
            <data key="k2">707367ee0244ebe47d20fe733e701278fab90f20</data>
        </node>
    </graph>
</graphml>
